# ac-trainer

./: .gitignore  Cargo.toml  gstructs.rs  main.rs  memory.rs
src/: egui.rs  graph.rs  gstructs.rs  main.rs  math.rs  memory.rs  structs.rs
